Buat strike pada ayat
Meltakkan strike pada ayat Bengkel Teknologi Perisian Pengaturcaraan

--- a/amali.html
+++ b/amali.html
@@ -10,5 +10,6 @@
     <p>Ujian Amali Source Code Management</p>
     <b>Github dan Git</b>
     <i>Makmal Computer</i>
+    <strike>Bengkel Teknologi Perisian Pengaturcaraan</strike>
 </body>
 </html>
