Buat size pada ayat
Membuat size 17px pada ayat Bangunkan branch

--- a/amali.html
+++ b/amali.html
@@ -7,9 +7,7 @@
     <title>Ujian SCM</title>
 </head>
 <body>
-    <p>Ujian Amali Source Code Management</p>
-    <b>Github dan Git</b>
-    <i>Makmal Computer</i>
-    <strike>Bengkel Teknologi Perisian Pengaturcaraan</strike>
+    <p>Keterampilan</p>
+    <p style="font-size:17px;">Bangunkan branch</p>
 </body>
 </html>
